tests/type-check/good/lam-forall-check.arr

fun apply-num(f :: (Number -> Number), n :: Number) -> Number:
  f(n)
end

five :: Number = apply-num(lam<A>(a :: A): a;, 5)
