tests/type-check/bad/function-tuple-string-to-bool.arr
fun f(y :: {Number;String}) -> {Number;Boolean}:
    y
end
